[tool.poetry]
name = "main"
version = "0.1.0"
description = ""
authors = ["Pablo González Rubio, Sergio García González"]

[tool.poetry.scripts]
server = "main.main:start"
client = "main.client:start"

[tool.poetry.dependencies]
python = ">=3.5.3, <3.6"
requests = "*"
Flask = ">=1.1, <2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
